[package]
name = "slave-pool"
version = "0.2.3"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/slave-pool"
readme = "README.md"
description = "Simple thread pool"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
keywords = ["threadpool", "thread", "threading", "parallelism"]
categories = ["concurrency"]
